--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ body {
 
 
 
+
+
+
+
 .donate {
     text-align: center;
 
@@ -81,7 +85,7 @@ body {
     color: rgb(250, 67, 67);
 }
 
-input {
+.donate-input {
     border: none;
     border-bottom: 2px solid rgb(230, 226, 226);
     width: 60%;
@@ -94,6 +98,10 @@ input {
 ::placeholder {
     color: rgb(188, 192, 192);
 }
+
+
+
+
 
 
 
@@ -121,7 +129,7 @@ input {
 }
 
 .food {
-    background-color: rgb(237, 252, 255);
+    background-color: rgb(204, 245, 253);
     text-align: left;
     padding: 40px 15px;
     width: 30%;
@@ -142,6 +150,11 @@ input {
     width: 30%;
     margin-left: 20px;
 }
+
+
+
+
+
 
 
 
@@ -174,4 +187,159 @@ input {
 
 #ex-one-h1 {
     font-size: 30px;
+}
+
+
+
+
+
+
+
+
+
+.extra-two {
+    margin-top: 150px;
+}
+
+.ex-two {
+    display: flex;
+    margin-left: 10%;
+}
+
+#ex-two-p {
+    padding-bottom: 40px;
+    padding-top: 10px;
+    font-size: 18px;
+}
+
+#ex-two-h1 {
+    font-size: 30px;
+}
+
+#ex-two-text {
+    padding-right: 70px;
+}
+
+#half-width-img img {
+    height: 270px;
+}
+
+
+
+
+.previous {
+    text-align: center;
+    margin-top: 150px;
+}
+
+.previous-h1 {
+    font-size: 30px;
+}
+
+.previous-p {
+    font-size: 23px;
+}
+
+
+.previous-work {
+    display: flex;
+    margin-left: 70px;
+    margin-right: 70px;
+}
+
+.p-one {
+    padding-right: 30px;
+    width: 20%;
+    text-align: justify;
+}
+
+
+.p-two {
+    padding-left: 100px;
+    width: 20%;
+    text-align: justify;
+}
+
+.p-three {
+    padding-left: 120px;
+    width: 20%;
+    text-align: justify;
+}
+
+.p-four {
+    padding-left: 130px;
+    width: 20%;
+    text-align: justify;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.update {
+    text-align: center;
+    margin-top: 150px;
+}
+
+.update-input {
+    text-decoration: none;
+    color: white;
+    background-image: linear-gradient(rgb(247, 236, 234), rgb(245, 230, 228));
+    border-radius: 5px;
+    padding: 15px 20px;
+    font-weight: 700;
+    font-size: 20px;
+
+}
+
+.up {
+    display: flex;
+    margin-left: 75px;
+
+}
+
+.up-bg {
+    background-image: linear-gradient(rgb(255, 215, 242), rgb(255, 223, 255));
+    padding: 70px 30px;
+    margin-left: 350px;
+    margin-right: 350px;
+    border-radius: 5px;
+}
+
+.update-h1 {
+    font-size: 50px;
+}
+
+.update-p {
+    font-size: 20px;
+    padding-bottom: 30px;
+}
+
+
+
+
+footer {
+    background-color: black;
+    color: white;
+    padding-bottom: 30px;
+    margin-top: 100px;
+    text-align: center;
+}
+
+.foot-h3 {
+    padding-top: 50px;
+    color: brown;
+    font-size: 30px;
+    font-style: italic;
+}
+
+.foot-p {
+    font-size: 15px;
 }
